# vecthar

./: CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  asan_check.sh
core_assets/shaders/ui/: text.frag  text.vert
demo/: main.cpp
demo/assets/models/: tower.glb
demo/assets/shaders/: basic.frag  basic.vert
demo/scenes/level1/: Level1.cpp  Level1.h
demo/scenes/level2/: Level2.cpp  Level2.h
demo/scenes/menu/: Menu.cpp  Menu.h
docs/: index.html  style.css
docs/en/: index.md
docs/en/architecture/: index.md
docs/en/getting-started/: index.md
docs/en/tutorials/: index.md
docs/ru/: index.md
docs/ru/architecture/: index.md
docs/ru/getting-started/: index.md
docs/ru/tutorials/: index.md
include/eocc/renderer/: Renderer.h
include/vecthar/: Engine.h
include/vecthar/assets/material/: Material.h
include/vecthar/assets/mesh/: Mesh.h  MeshUi.h
include/vecthar/assets/mesh/primitives/: Primitive.h
include/vecthar/assets/mesh/primitives/cube/: CubeGeometry.h
include/vecthar/assets/mesh/primitives/square/: SquareGeometry.h
include/vecthar/assets/mesh/structures/: MeshData.h  MeshUiData.h
include/vecthar/assets/model/structures/: Model.h
include/vecthar/assets/shader/: Shader.h
include/vecthar/base/: FPSCounter.h  OpenGLTypes.h
include/vecthar/base/logger/: Logger.h
include/vecthar/base/structures/: Position.h  Rotate.h  Scale.h  Texture.h  Transform.h
include/vecthar/camera/: Camera.h
include/vecthar/input/: Key.h
include/vecthar/renderer/: Renderer.h
include/vecthar/scene/base/: SceneBase.h
include/vecthar/system/window/: Window.h
include/vecthar/ui/: Font8x8.h  TextRenderer.h
src/: main.cpp
src/engine/: Engine.cpp  Engine.h
src/engine/assets/material/: Material.h
src/engine/assets/mesh/: Mesh.cpp  Mesh.h
src/engine/assets/mesh/primitives/: Primitive.cpp
src/engine/assets/mesh/primitives/cube/: CubeGeometry.cpp  CubeGeometry.h
src/engine/base/struct/: Position.h  Rotate.h  Scale.h  Texture.h
src/engine/base/structures/: Transform.h
src/engine/renderer/: Renderer.cpp  Renderer.h
src/engine/scene/base/: SceneBase.h
src/engine/scene/manager/: SceneManager.cpp  SceneManager.h
src/engine/scene/objects/: BaseObject.h
src/engine/scene/objects/cube/: Cube.h
src/engine/scene/objects/cube/data/: CubeData.cpp  CubeData.h
src/engine/system/window/: Window.cpp  Window.h
src/eocc/renderer/: Renderer.cpp
src/game/scenes/level1/: Level1.cpp  Level1.h
src/game/scenes/menu/: Menu.cpp  Menu.h
src/vecthar/: Engine.cpp
src/vecthar/assets/mesh/: Mesh.cpp  MeshUi.cpp
src/vecthar/assets/mesh/primitives/: Primitive.cpp
src/vecthar/assets/mesh/primitives/cube/: CubeGeometry.cpp
src/vecthar/assets/mesh/primitives/square/: SquareGeometry.cpp
src/vecthar/assets/shader/: Shader.cpp
src/vecthar/base/: FPSCounter.cpp
src/vecthar/base/logger/: Logger.cpp
src/vecthar/camera/: Camera.cpp
src/vecthar/renderer/: Renderer.cpp
src/vecthar/system/window/: Window.cpp
src/vecthar/ui/: Font8x8.cpp  TextRenderer.cpp
